# ai-schedule-appoitments

./: README.md  docker-compose.yaml  pyproject.toml
app/: __init__.py  config.py  streamlit_app.py
app/agent/: __init__.py  agent.py  state.py
app/db/: models.py  session.py
app/llm/: adapter.py
app/security/: guardrails.py
app/services/: asaas.py  klingo.py
app/utils/: filters.py  validators.py
